# breeze

./: .pre-commit-config.yml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: format.yml  tests.yml
breeze/: __init__.py  __main__.py  logger.py
breeze/builtin/: __init__.py
breeze/builtin/components/: __init__.py  debug_component.py  rectangle_renderer.py  transform.py  triangle_renderer.py
breeze/builtin/game_objects/: __init__.py  debug_game_object.py
breeze/color/: __init__.py  color.py
breeze/core/: __init__.py  component.py  game.py  game_object.py  window.py
breeze/core/component/: component.py
breeze/core/game/: game.py
breeze/core/game_object/: game_object.py
breeze/exceptions/: __init__.py
breeze/exceptions/component/: __init__.py
breeze/exceptions/game/: __init__.py
breeze/exceptions/game_object/: __init__.py
docs/: breeze.builtin.components.rst  breeze.builtin.game_objects.rst  breeze.builtin.rst  breeze.core.component.rst  breeze.core.game.rst  breeze.core.game_object.rst  breeze.core.rst  breeze.exceptions.component.rst  breeze.exceptions.game.rst  breeze.exceptions.game_object.rst  breeze.exceptions.rst  breeze.rst  conf.py  index.rst  modules.rst  tests.rst
sandbox/: main.py  test_component.py
scripts/: build_docs.sh  sandbox.sh  test.sh  tree.sh  venv.sh
tests/: test_breeze.py  test_ecs.py
