[tool.poetry]
name = "breeze"
version = "0.1.0.2"
description = ""
authors = ["Silvan Schmidt <silvan.genius@gmail.com>"]
license = "MIT"
readme = "README.md"

exclude = [
  "sandbox"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
sphinx = "^5.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
