[tool.poetry]
name = "breeze"
version = "0.1.1"
description = ""
authors = ["Silvan Schmidt <silvan.genius@gmail.com>"]
license = "MIT"
readme = "README.md"

exclude = [
  "sandbox"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.2"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
